2012-08-08  Julien Bect  <julien.bect@supelec.fr>

	Renamed stk_conditionning to stk_conditioning.

	* utils/stk_conditionning.m: renamed and modified
	* examples/example05.m: modified accordingly

2012-08-07  Julien Bect  <julien.bect@supelec.fr>

	Added tests and improved documentation.

	* misc/specfun/stk_sf_matern.m: tests & doc
	* misc/specfun/stk_sf_matern32.m: idem
	* misc/specfun/stk_sf_matern52.m: idem

2012-07-15  Julien Bect  <julien.bect@supelec.fr>

	Replaced a call to isrow(), which didn't exist in some recent Matlab
	versions (e.g., R2010b), by a direct call to size().

	* misc/matlab/index.m: modified

2012-07-10  Julien Bect  <julien.bect@supelec.fr>

	Fixed a warning generated by stk_compile_all under Octave.

	* misc/config/stk_compile_all.m: modified

2012-07-08  Julien Bect  <julien.bect@supelec.fr>

	Added tests and improved documentation.

	* sampling/stk_sampling_randunif.m: tests & doc
	* sampling/stk_sampling_randomlhs.m: idem
	* sampling/stk_sampling_regulargrid.m: idem
	* sampling/stk_sampling_maximinlhs.m: idem

	New function to test the LHS property.

	* misc/test/stk_is_lhs.m: new function

	Renamed stk_sampling_cartesiangrid to stk_sampling_regulargrid,
	and changed the meaning of the first argument for consistency with
	other stk_sampling_* functions.

	* sampling/stk_sampling_cartesiangrid.m: renamed and modified
	* examples/example01.m: modified accordingly
	* examples/example02.m: idem
	* examples/example04.m: idem
	* examples/example05.m: idem
	* examples/example06.m: idem
	* examples/example07.m: idem
	* examples/example08.m: idem
	* paramestim/stk_param_estim.m: idem
	* core/stk_predict.m: idem

2012-07-04  Julien Bect  <julien.bect@supelec.fr>

	Fixed a bug in stk_compile_all() under Octave, related to a
	strange behaviour of exist().

	* misc/config/stk_compile_all.m: bugfix.

	Improved doc and added tests in several functions. Also, fixed a
	minor bug in stk_model().

	* examples/example07.m: fixed comment